cpdflibwrapper.h


struct cpdf_position {
  int cpdf_anchor;    
  double cpdf_coord1; 
  double cpdf_coord2; 
};
void cpdf_scaleContents(int, int, struct cpdf_position, double);
void cpdf_shiftContents(int, int, double, double);
void cpdf_rotate(int, int, int);
void cpdf_rotateBy(int, int, int);
void cpdf_rotateContents(int, int, double);
void cpdf_upright(int, int);
void cpdf_hFlip(int, int);
void cpdf_vFlip(int, int);
void cpdf_crop(int, int, double, double, double, double);
void cpdf_removeCrop(int, int);
void cpdf_removeTrim(int, int);
void cpdf_removeArt(int, int);
void cpdf_removeBleed(int, int);
void cpdf_trimMarks(int, int);
void cpdf_showBoxes(int, int);
void cpdf_hardBox(int, int, const char[]);
void cpdf_compress(int);
void cpdf_decompress(int);
void cpdf_squeezeInMemory(int);
void cpdf_startGetBookmarkInfo(int);
int cpdf_numberBookmarks(void);
int cpdf_getBookmarkLevel(int);
int cpdf_getBookmarkPage(int, int);
char *cpdf_getBookmarkText(int);
int cpdf_getBookmarkOpenStatus(int);
void cpdf_endGetBookmarkInfo(void);
void cpdf_startSetBookmarkInfo(int);
void cpdf_setBookmarkLevel(int, int);
void cpdf_setBookmarkPage(int, int, int);
void cpdf_setBookmarkOpenStatus(int, int);
void cpdf_setBookmarkText(int, const char[]);
void cpdf_endSetBookmarkInfo(int);
void *cpdf_getBookmarksJSON(int, int *);
void cpdf_setBookmarksJSON(int, void *, int);
void cpdf_tableOfContents(int, int, double, const char[], int);
void cpdf_stampOn(int, int, int);
void cpdf_stampUnder(int, int, int);
void cpdf_stampExtended(int, int, int, int, int, struct cpdf_position, int);
int cpdf_combinePages(int, int);
enum cpdf_font {
  cpdf_timesRoman,           
  cpdf_timesBold,            
  cpdf_timesItalic,          
  cpdf_timesBoldItalic,      
  cpdf_helvetica,            
  cpdf_helveticaBold,        
  cpdf_helveticaOblique,     
  cpdf_helveticaBoldOblique, 
  cpdf_courier,              
  cpdf_courierBold,          
  cpdf_courierOblique,       
  cpdf_courierBoldOblique    
};
enum cpdf_justification {
  cpdf_leftJustify,   
  cpdf_CentreJustify, 
  cpdf_RightJustify   
};
void cpdf_addText(int,                  
                  int,                  
                  int,                  
                  const char[],         
                  struct cpdf_position, 
                  double,               
                  int,                  
                  enum cpdf_font,       
                  double,               
                  double,               
                  double, 
                  double, 
                  int,    
                  int,    
                  int,    
                  double, 
                  enum cpdf_justification, 
                  int,          
                  int,          
                  const char[], 
                  double,       
                  int           
);
void cpdf_addTextSimple(int,                  
                        int,                  
                        const char[],         
                        struct cpdf_position, 
                        enum cpdf_font,       
                        double);              
void cpdf_removeText(int, int);
int cpdf_textWidth(enum cpdf_font, const char[]);
void cpdf_addContent(const char[], int, int, int);
char *cpdf_stampAsXObject(int, int, int);
void cpdf_impose(int, double, double, int, int, int, int, int, double, double,
                 double);
void cpdf_twoUp(int);
void cpdf_twoUpStack(int);
void cpdf_padBefore(int, int);
void cpdf_padAfter(int, int);
void cpdf_padEvery(int, int);
void cpdf_padMultiple(int, int);
void cpdf_padMultipleBefore(int, int);
void *cpdf_annotationsJSON(int, int *);
int cpdf_isLinearized(const char[]);
int cpdf_getVersion(int);
int cpdf_getMajorVersion(int);
char *cpdf_getTitle(int);
char *cpdf_getAuthor(int);
char *cpdf_getSubject(int);
char *cpdf_getKeywords(int);
char *cpdf_getCreator(int);
char *cpdf_getProducer(int);
char *cpdf_getCreationDate(int);
char *cpdf_getModificationDate(int);
char *cpdf_getTitleXMP(int);
char *cpdf_getAuthorXMP(int);
char *cpdf_getSubjectXMP(int);
char *cpdf_getKeywordsXMP(int);
char *cpdf_getCreatorXMP(int);
char *cpdf_getProducerXMP(int);
char *cpdf_getCreationDateXMP(int);
char *cpdf_getModificationDateXMP(int);
void cpdf_setTitle(int, const char[]);
void cpdf_setAuthor(int, const char[]);
void cpdf_setSubject(int, const char[]);
void cpdf_setKeywords(int, const char[]);
void cpdf_setCreator(int, const char[]);
void cpdf_setProducer(int, const char[]);
void cpdf_setCreationDate(int, const char[]);
void cpdf_setModificationDate(int, const char[]);
void cpdf_setTitleXMP(int, const char[]);
void cpdf_setAuthorXMP(int, const char[]);
void cpdf_setSubjectXMP(int, const char[]);
void cpdf_setKeywordsXMP(int, const char[]);
void cpdf_setCreatorXMP(int, const char[]);
void cpdf_setProducerXMP(int, const char[]);
void cpdf_setCreationDateXMP(int, const char[]);
void cpdf_setModificationDateXMP(int, const char[]);
void cpdf_getDateComponents(const char[], int *, int *, int *, int *, int *,
                            int *, int *, int *);
char *cpdf_dateStringOfComponents(int, int, int, int, int, int, int, int);
int cpdf_getPageRotation(int, int);
int cpdf_hasBox(int, int, const char[]);
void cpdf_getMediaBox(int, int, double *, double *, double *, double *);
void cpdf_getCropBox(int, int, double *, double *, double *, double *);
void cpdf_getTrimBox(int, int, double *, double *, double *, double *);
void cpdf_getArtBox(int, int, double *, double *, double *, double *);
void cpdf_getBleedBox(int, int, double *, double *, double *, double *);
void cpdf_setMediabox(int, int, double, double, double, double);
void cpdf_setCropBox(int, int, double, double, double, double);
void cpdf_setTrimBox(int, int, double, double, double, double);
void cpdf_setArtBox(int, int, double, double, double, double);
void cpdf_setBleedBox(int, int, double, double, double, double);
void cpdf_markTrapped(int);
void cpdf_markUntrapped(int);
void cpdf_markTrappedXMP(int);
void cpdf_markUntrappedXMP(int);
enum cpdf_layout {
  cpdf_singlePage,
  cpdf_oneColumn,
  cpdf_twoColumnLeft,
  cpdf_twoColumnRight,
  cpdf_twoPageLeft,
  cpdf_twoPageRight
};
void cpdf_setPageLayout(int, enum cpdf_layout);
enum cpdf_pageMode {
  cpdf_useNone,
  cpdf_useOutlines,
  cpdf_useThumbs,
  cpdf_useOC,
  cpdf_useAttachments
};
void cpdf_setPageMode(int, enum cpdf_pageMode);
void cpdf_hideToolbar(int, int);
void cpdf_hideMenubar(int, int);
void cpdf_hideWindowUi(int, int);
void cpdf_fitWindow(int, int);
void cpdf_centerWindow(int, int);
void cpdf_displayDocTitle(int, int);
void cpdf_openAtPage(int, int, int);
void cpdf_setMetadataFromFile(int, const char[]);
void cpdf_setMetadataFromByteArray(int, void *, int);
void *cpdf_getMetadata(int, int *);
void cpdf_removeMetadata(int);
void cpdf_createMetadata(int);
void cpdf_setMetadataDate(int, const char[]);