src/bindings.rs


    pub fn cpdf_scaleContents(arg1: c_int, arg2: c_int, arg3: CpdfPosition, arg4: f64);
    pub fn cpdf_shiftContents(arg1: c_int, arg2: c_int, arg3: f64, arg4: f64);
    pub fn cpdf_rotate(arg1: c_int, arg2: c_int, arg3: c_int);
    pub fn cpdf_rotateBy(arg1: c_int, arg2: c_int, arg3: c_int);
    pub fn cpdf_rotateContents(arg1: c_int, arg2: c_int, arg3: f64);
    pub fn cpdf_upright(arg1: c_int, arg2: c_int);
    pub fn cpdf_hFlip(arg1: c_int, arg2: c_int);
    pub fn cpdf_vFlip(arg1: c_int, arg2: c_int);
    pub fn cpdf_crop(arg1: c_int, arg2: c_int, arg3: f64, arg4: f64, arg5: f64, arg6: f64);
    pub fn cpdf_removeCrop(arg1: c_int, arg2: c_int);
    pub fn cpdf_removeTrim(arg1: c_int, arg2: c_int);
    pub fn cpdf_removeArt(arg1: c_int, arg2: c_int);
    pub fn cpdf_removeBleed(arg1: c_int, arg2: c_int);
    pub fn cpdf_trimMarks(arg1: c_int, arg2: c_int);
    pub fn cpdf_showBoxes(arg1: c_int, arg2: c_int);
    pub fn cpdf_hardBox(arg1: c_int, arg2: c_int, arg3: *const c_char);
    pub fn cpdf_compress(arg1: c_int);
    pub fn cpdf_decompress(arg1: c_int);
    pub fn cpdf_squeezeInMemory(arg1: c_int);
    pub fn cpdf_startGetBookmarkInfo(arg1: c_int);
    pub fn cpdf_numberBookmarks() -> c_int;
    pub fn cpdf_getBookmarkLevel(arg1: c_int) -> c_int;
    pub fn cpdf_getBookmarkPage(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_getBookmarkText(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getBookmarkOpenStatus(arg1: c_int) -> c_int;
    pub fn cpdf_endGetBookmarkInfo();
    pub fn cpdf_startSetBookmarkInfo(arg1: c_int);
    pub fn cpdf_setBookmarkLevel(arg1: c_int, arg2: c_int);
    pub fn cpdf_setBookmarkPage(arg1: c_int, arg2: c_int, arg3: c_int);
    pub fn cpdf_setBookmarkOpenStatus(arg1: c_int, arg2: c_int);
    pub fn cpdf_setBookmarkText(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_endSetBookmarkInfo(arg1: c_int);
    pub fn cpdf_getBookmarksJSON(arg1: c_int, arg2: *mut c_int) -> *mut c_void;
    pub fn cpdf_setBookmarksJSON(arg1: c_int, arg2: *mut c_void, arg3: c_int);
    pub fn cpdf_tableOfContents(
        arg1: c_int,
        arg2: c_int,
        arg3: f64,
        arg4: *const c_char,
        arg5: c_int,
    );
    pub fn cpdf_stampOn(arg1: c_int, arg2: c_int, arg3: c_int);
    pub fn cpdf_stampUnder(arg1: c_int, arg2: c_int, arg3: c_int);
    pub fn cpdf_stampExtended(
        arg1: c_int,
        arg2: c_int,
        arg3: c_int,
        arg4: c_int,
        arg5: c_int,
        arg6: CpdfPosition,
        arg7: c_int,
    );
    pub fn cpdf_combinePages(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_addText(
        arg1: c_int,
        arg2: c_int,
        arg3: c_int,
        arg4: *const c_char,
        arg5: CpdfPosition,
        arg6: f64,
        arg7: c_int,
        arg8: CpdfFont,
        arg9: f64,
        arg10: f64,
        arg11: f64,
        arg12: f64,
        arg13: c_int,
        arg14: c_int,
        arg15: c_int,
        arg16: f64,
        arg17: CpdfJustification,
        arg18: c_int,
        arg19: c_int,
        arg20: *const c_char,
        arg21: f64,
        arg22: c_int,
    );
    pub fn cpdf_addTextSimple(
        arg1: c_int,
        arg2: c_int,
        arg3: *const c_char,
        arg4: CpdfPosition,
        arg5: CpdfFont,
        arg6: f64,
    );
    pub fn cpdf_removeText(arg1: c_int, arg2: c_int);
    pub fn cpdf_textWidth(arg1: CpdfFont, arg2: *const c_char) -> c_int;
    pub fn cpdf_addContent(arg1: *const c_char, arg2: c_int, arg3: c_int, arg4: c_int);
    pub fn cpdf_stampAsXObject(arg1: c_int, arg2: c_int, arg3: c_int) -> *mut c_char;
    pub fn cpdf_impose(
        arg1: c_int,
        arg2: f64,
        arg3: f64,
        arg4: c_int,
        arg5: c_int,
        arg6: c_int,
        arg7: c_int,
        arg8: c_int,
        arg9: f64,
        arg10: f64,
        arg11: f64,
    );
    pub fn cpdf_twoUp(arg1: c_int);
    pub fn cpdf_twoUpStack(arg1: c_int);
    pub fn cpdf_padBefore(arg1: c_int, arg2: c_int);
    pub fn cpdf_padAfter(arg1: c_int, arg2: c_int);
    pub fn cpdf_padEvery(arg1: c_int, arg2: c_int);
    pub fn cpdf_padMultiple(arg1: c_int, arg2: c_int);
    pub fn cpdf_padMultipleBefore(arg1: c_int, arg2: c_int);
    pub fn cpdf_annotationsJSON(arg1: c_int, arg2: *mut c_int) -> *mut c_void;
    pub fn cpdf_isLinearized(arg1: *const c_char) -> c_int;
    pub fn cpdf_getVersion(arg1: c_int) -> c_int;
    pub fn cpdf_getMajorVersion(arg1: c_int) -> c_int;
    pub fn cpdf_getTitle(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getAuthor(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getSubject(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getKeywords(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getCreator(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getProducer(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getCreationDate(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getModificationDate(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getTitleXMP(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getAuthorXMP(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getSubjectXMP(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getKeywordsXMP(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getCreatorXMP(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getProducerXMP(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getCreationDateXMP(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getModificationDateXMP(arg1: c_int) -> *mut c_char;
    pub fn cpdf_setTitle(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setAuthor(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setSubject(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setKeywords(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setCreator(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setProducer(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setCreationDate(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setModificationDate(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setTitleXMP(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setAuthorXMP(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setSubjectXMP(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setKeywordsXMP(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setCreatorXMP(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setProducerXMP(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setCreationDateXMP(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setModificationDateXMP(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_getDateComponents(
        arg1: *const c_char,
        arg2: *mut c_int,
        arg3: *mut c_int,
        arg4: *mut c_int,
        arg5: *mut c_int,
        arg6: *mut c_int,
        arg7: *mut c_int,
        arg8: *mut c_int,
        arg9: *mut c_int,
    );
    pub fn cpdf_dateStringOfComponents(
        arg1: c_int,
        arg2: c_int,
        arg3: c_int,
        arg4: c_int,
        arg5: c_int,
        arg6: c_int,
        arg7: c_int,
        arg8: c_int,
    ) -> *mut c_char;
    pub fn cpdf_getPageRotation(arg1: c_int, arg2: c_int) -> c_int;
    pub fn cpdf_hasBox(arg1: c_int, arg2: c_int, arg3: *const c_char) -> c_int;
    pub fn cpdf_getMediaBox(
        arg1: c_int,
        arg2: c_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
    );
    pub fn cpdf_getCropBox(
        arg1: c_int,
        arg2: c_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
    );
    pub fn cpdf_getTrimBox(
        arg1: c_int,
        arg2: c_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
    );
    pub fn cpdf_getArtBox(
        arg1: c_int,
        arg2: c_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
    );
    pub fn cpdf_getBleedBox(
        arg1: c_int,
        arg2: c_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
    );
    pub fn cpdf_setMediabox(arg1: c_int, arg2: c_int, arg3: f64, arg4: f64, arg5: f64, arg6: f64);
    pub fn cpdf_setCropBox(arg1: c_int, arg2: c_int, arg3: f64, arg4: f64, arg5: f64, arg6: f64);
    pub fn cpdf_setTrimBox(arg1: c_int, arg2: c_int, arg3: f64, arg4: f64, arg5: f64, arg6: f64);
    pub fn cpdf_setArtBox(arg1: c_int, arg2: c_int, arg3: f64, arg4: f64, arg5: f64, arg6: f64);
    pub fn cpdf_setBleedBox(arg1: c_int, arg2: c_int, arg3: f64, arg4: f64, arg5: f64, arg6: f64);
    pub fn cpdf_markTrapped(arg1: c_int);
    pub fn cpdf_markUntrapped(arg1: c_int);
    pub fn cpdf_markTrappedXMP(arg1: c_int);
    pub fn cpdf_markUntrappedXMP(arg1: c_int);

    pub fn cpdf_setPageLayout(arg1: c_int, arg2: CpdfLayout);

    pub fn cpdf_setPageMode(arg1: c_int, arg2: CpdfPageMode);
    pub fn cpdf_hideToolbar(arg1: c_int, arg2: c_int);
    pub fn cpdf_hideMenubar(arg1: c_int, arg2: c_int);
    pub fn cpdf_hideWindowUi(arg1: c_int, arg2: c_int);
    pub fn cpdf_fitWindow(arg1: c_int, arg2: c_int);
    pub fn cpdf_centerWindow(arg1: c_int, arg2: c_int);
    pub fn cpdf_displayDocTitle(arg1: c_int, arg2: c_int);
    pub fn cpdf_openAtPage(arg1: c_int, arg2: c_int, arg3: c_int);
    pub fn cpdf_setMetadataFromFile(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_setMetadataFromByteArray(arg1: c_int, arg2: *mut c_void, arg3: c_int);
    pub fn cpdf_getMetadata(arg1: c_int, arg2: *mut c_int) -> *mut c_void;
    pub fn cpdf_removeMetadata(arg1: c_int);
    pub fn cpdf_createMetadata(arg1: c_int);
    pub fn cpdf_setMetadataDate(arg1: c_int, arg2: *const c_char);
